feat: unify file storage and URL handling for uploads
- Introduced app.upload.url-prefix to separate filesystem paths from public URLs
- Updated docs and images controllers to return uniform /uploads/... URLs
- Fixed Nginx config to correctly serve static files from uploads directory
- Verified access to household/realEstate docs and images via consistent URL format
- Adjusted IntelliJ/Git safe.directory setup for local development